scss/style.scss
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,400italic);

$primary: #41286B;
$primary-alpha: rgba(65, 40, 107, 0.4);
$primary-shade: #21084B;
$secondary: #66C2A6;
$light: #fff;
$light-shade: #eee;
$accent: #F07C6C;
$accent-light: #F39E8E;
$dark: #111;


@mixin OpenSans {
  font-family: "Open Sans", Arial, sans-serif;
  font-weight: 400;
}

@mixin OpenSansLight {
  font-family: "Open Sans", Arial, sans-serif;
  font-weight: 300;
}

body {
  padding: 0;
  margin: 0;
  font-size: 1em;
  @include OpenSans;
}
*::selection {
  background: $accent;
}
h1, h2, h3, h4, h5, h6, h7, h8, h9, h10, h11, h12 {
  @include OpenSansLight;
}
h1, h2, h3, h4, h5, h6, h7, h8, h9, h10, h11, h12, p,
nav, ul, .row {
  box-sizing: border-box;
  width: 100%;
  max-width: 64rem;
  padding: 1.4em 3rem 1em 3rem;
  margin: 0;
}
ul {
  padding-left: 5rem;
}
h1 {
  font-size: 3em;
}
h2 {
  font-size: 2em;
}
h3 {
  font-size: 1.6em;
}
h4 {
  @include OpenSans;
  font-style: italic;
  font-size: 1.3em;
}
h3:first-child, h3+h4 {
  padding-top:0.1em;
}
p {
  font-size: 1.2em;
}
.social-buttons {
  text-align: center;
  padding-top: 1em;
}
h1+p, h2+p, h3+p, h4+p, h5+p, h6+p, h7+p, h8+p, h9+p,
h10+p, h11+p, h12+p, p+p {
  padding-top: 0;
}
h2 {
  font-size: 2.5em;
  padding-top: 1em;
  padding-bottom: 0.8em;
}
section, header, footer, .row, nav, iframe {
  display: flex;
  justify-content: center;
  align-items: stretch;
  padding: 2rem 0;
}
section, header, footer {
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  background-color: $light;
}
section:nth-child(odd), section.odd {
  background-color: $light-shade;
}
.row {
  flex-wrap: wrap;
  max-width: 64rem;
  padding: 0;
}
.column {
  display: flex;
  flex-direction: column;
  flex: 1;
  padding-right: 1.5em;
  align-items: center;
  justify-content: center;
}
.column--double {
  flex: 2;
}
.column:last-child {
  padding-right: 0;
}
@media all and (max-width: 1000px) {
  .row {
    display: block;
  }
  .column {
    padding-right: 0;
    display: block;
  }
}
a {
  transition: all ease 0.3s;
  color:$accent;
}
a:hover {
  color: $accent-light;
}
a img {
  border:0;
}
a.fa {
  text-decoration: none;
}
.no-break {
  display: inline-block;
}
.text-input {
  box-sizing: border-box;
  border: 0;
  padding: 0.6em 1.1em;
  margin: 0.3em 0;
  border-radius: 0.3em;
  background-color: $light;
  color: $dark;
  font-size: 1em;
  transition: all 0.3s ease;
}
.text-input:hover {
  opacity:0.9;
}
.text-input:focus {
  outline: 0;
  opacity: 1;
  background-color: $light-shade;
}
.text-input--primary {
  font-size: 1.2em;
}
.button, a.button {
  cursor: pointer;
  display: inline-block;
  border: 0;
  padding: 0.6em 1.1em;
  margin: 0.3em;
  border-radius: 0.3em;
  -webkit-font-smoothing: antialiased;
  transform: translate3d( 0, 0, 0);
  background-color: $light;
  color: $dark;
  text-decoration: none;
  transition: all 0.3s cubic-bezier(0,1.5,0.5,1);
}
.button:hover {
  transform: scale(1.1) translate3d( 0, 0, 0 );
}
.button--primary, a.button--primary {
  font-size: 1.2em;
  background-color:$secondary;
  color: $light;
}
.button--secondary, a.button--secondary {
  background-color:$accent;
  color: $light;
}
.button--social, a.button--social {
  padding-left: 0.6em;
  padding-right: 0.6em;
  min-width: 1em;
}
.button--simple, a.button--simple {
  font-weight: normal;
  background-color: transparent;
  color: $light;
}

.centered {
  text-align: center;
}
p img {
  max-width: 100%;
}
img.centered {
  display: block;
  margin: 20px auto;
  width: auto;
  max-width: 100%;
  height: auto;
  /* chrome 48 bug fix */
  min-width: 0;
  min-height: 0;
}
@media all and (min-width: 1000px) {
  img.centered, .graph {
    max-width: 1000px;
  }
}

@media all and (max-width: 800px) {
  html {
    font-size:0.8em;
  }
}

/* Transparency report */
.stat {
  display: inline-block;
  vertical-align: middle;
  padding:20px;
  margin: 20px;
  background-color: rgba(0,0,0,0.2);
  border-radius: 4px;

  h1 {
    margin: 0 0 10px 0;
    font-weight: bolder;
    font-size: 2.5rem;
    text-align: center;
    padding: 0;
  }
  p {
    font-weight: lighter;
    font-size: 1rem;
    text-align: center;
  }
}
.qa {
  width: 60%;
  padding: 1.4em 3rem 1em 3rem;
  margin: auto;
  h1 {
    margin: 0 0 10px 0;
    font-weight: bolder;
    font-size: 1.2rem;
  }
  p {
    font-weight: lighter;
    font-size: 1rem;
  }
}
.graph {
  width: 100%;
  margin: 20px auto;
}

p.caption {
  text-align: center;
  font-style: italic;
  font-size: 0.9em;
  margin-bottom: 2em;
}




.frame {
  background-size: cover;
  background-position: center;
  width: 16.5rem;
  height: 16.5rem;
  margin: 2rem;
  border-radius: 50%;
  display: block;
  position: relative;
}
@media all and (max-width: 1000px) {
  .frame {
    margin: 2rem auto;
  }
}
.frame--qa:after {
  content: "";
  display: block;
  position: absolute;
  bottom: -3rem;
  right: -2rem;
  width: 11.2rem;
  height: 8.9rem;
  transform: scale(0.8);
  background-position: center;
  background-image: url("../img/rover.png");
  background-size: cover;
}
.frame--learnathon:after {
  content: "";
  display: block;
  position: absolute;
  bottom: -3rem;
  left: -2rem;
  width: 6.2rem;
  height: 11.2rem;
  transform: scale(0.8);
  background-position: center;
  background-image: url("../img/flag.png");
  background-size: cover;
}

/* Block-specific */
section.header {
  background-color: $primary;
  background-image: url("../img/stars.jpg");
  background-size: cover;
  background-position: center;
  color: $light;
  box-sizing: border-box;
  min-height: calc(100vh - 5rem);
  justify-content: center;
  overflow: hidden;
  position: relative;
  perspective: 340px;
}
.header__content {
  position: relative;
  z-index:9002;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin:0.3em;
  margin-bottom: 2.5em;
}
.header__loader {
  position: absolute;
  top:0;
  left:0;
  height: 0.6rem;
  z-index: 9001;
  background-color:$secondary;
  transition: all ease 0.3s;
  opacity: 0;
}
.header__bg--dimmed + .header__loader {
  opacity: 0.9;
}
.header__title {
  text-align: center;
  font-size: 5em;
  padding-top:0.1em;
  padding-bottom:0.1em;
}
.header__description {
  text-align: center;
  font-weight: lighter;
  padding-bottom: 1em;
}
.header__input {
  box-sizing: border-box;
  flex: 1;
  margin-right: 0.5em;
}
.header__form {
  display: flex;
  width: 100%;
  padding-bottom: 0.5em;
  max-width: 35em;
}
@media all and (max-width: 700px) {
  .header__input {
    margin-right: 0;
    align-self:stretch;
  }
  .header__form {
    flex-direction: column;
    align-items: center;
    box-sizing: border-box;
    padding-left:3em;
    padding-right: 3em;
  }
  .button--primary {
    padding-left: 2em;
    padding-right: 2em;
  }
}

a.header__inquiries {
  margin: 4em 2em 0 2em;
}
.header__social {
  text-align: center;
}

.column--events {
  justify-content: flex-start;
}
.column--footer {
  text-align: center;
  font-style: normal;
}

.question {
  font-style: italic;
  padding-bottom: 0.2em;
}
.answer {
  padding-left: 4em;
}

.sponsors img {
  max-width: 100%;
  box-sizing: border-box;
}
.sponsors a {
  display: inline-block;
  transition: all 0.3s cubic-bezier(0,1.5,0.5,1);
  transform: scale(1) translate3d(0,0,0);
}
.sponsors a:hover {
  transform: scale(1.1);
}
.sponsors div {
  text-align: center;
}
.inline-img {
  display: inline-block;
  max-height: 8em;
  border: 2em solid transparent;
}
.gold img {
  max-height: 12em;
}

section.footer {
  background-color: $primary-shade;
  color: $light;
  text-align: center;
}

section.nav {
  background-color: $primary-shade;
  padding-top: 0;
  padding-bottom: 0;
}
.scrolled .nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10000;
}
.scrolled .nav+section {
  border-top: 5rem solid transparent;
}
nav {
  color: $light;
  height: 5rem;
  justify-content: flex-end;
  padding-top: 0;
  padding-bottom: 0;
  overflow: hidden;
}
nav h1 {
  flex: 1;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: flex-start;
}
a.nav-link {
  height: 5rem;
  text-align: center;
  line-height: 5rem;
  padding: 0 2rem;
  color: $light;
  -webkit-font-smoothing: antialiased;
  transition: all 0.3s cubic-bezier(0,1.5,0.5,1);
  text-decoration: none;
}
a.nav-link:hover {
  transform: scale(1.1);
}
a.nav-link--title {
  justify-self: flex-start;
}
a.nav-link--selected {
  background-color: rgba(255,255,255,0.2);
}
a.nav-link img {
  box-sizing: border-box;
  height: 5rem;
  padding: 0.7rem;
  width: auto;
}
a.nav-link--toggle {
  display: none;
  cursor: pointer;
}
@media all and (max-width: 600px) {
  nav {
    display:block;
    transition: all ease 0.3s;
  }
  nav.open {
    height: 20rem;
  }
  nav h1 {
    display:none;
  }
  a.nav-link {
    display: block;
  }
  a.nav-link--toggle {
    display: block;
  }
}

/* Header effects */
.header__bg {
  position:absolute;
  top:0;
  left:0;
  right:0;
  bottom:0;
  background-image: url("../img/moonbg.png");
  background-repeat: repeat-x;
  background-position: bottom center;
  background-size: 30rem 15rem;
}
.header__bg:after, .header__bg:before {
  content:'';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transition: all 0.4s linear;
  opacity: 1;
}
.header__bg:after {
  background: linear-gradient(to bottom,rgba(215, 72, 20, 0.28) 0%, rgba(66, 150, 223, 0.21) 100%);
  z-index:8999;
}
.header__bg:before {
  background: $primary;
  z-index:9000;
  opacity: 0;
}
.header__bg.header__bg--dimmed:before {
  opacity: 1;
}

.header__rocket {
  position: absolute;
  bottom: 1rem;
  right: 4rem;
  width: 16rem;
  height: 26.7rem;
  background-image: url("../img/rocket.png");
  background-position: center;
  background-size: 16rem 26.7rem;
  background-repeat: no-repeat;
  z-index: 50;
}

.header__astronaut {
  position: absolute;
  width: 3rem;
  height: 5rem;
}
.header__astronaut:before {
  content: '';
  display: block;
  background-color: rgba(65, 40, 107, 0.3);
  border-radius: 50%;
  position: absolute;
  bottom:-0.5rem;
  left:-0.5rem;
  right:-0.5rem;
  height: 1rem;
}

.header__astronaut__body {
  position: absolute;
  bottom:0;
  top:0;
  background-size: cover;
  background-position: center bottom;
}

.astronaut__body--1 {
  background-image: url("../img/astronaut1.png");
  left: 0;
  right: 0;
}
.astronaut__body--2 {
  background-image: url("../img/astronaut2.png");
  left: -0.2em;
  right: -0.2em;
  margin-left: -0.2em;
}
.astronaut__body--3 {
  background-image: url("../img/astronaut3.png");
  left: -0.5em;
  right: -0.5em;
  bottom: 0.5em;
}

.header__astronaut__head {
  display: block;
  width: 3rem;
  height: 3rem;
  background-size: 3.5rem auto;
  background-position: 45% 40%;
  margin-left: auto;
  margin-right: auto;
  margin-top:-2.5rem;
  box-sizing: border-box;
  border-radius: 50%;
  border: 0.3rem solid #a9d2d4;
  position: relative;
}

